feat: [F4] - Subdomínio user + aplicação auth
